--- a/Projects/project4-etch a sketch/index.html
+++ b/Projects/project4-etch a sketch/index.html
@@ -21,7 +21,7 @@
         <div id="grid-container"></div>
     </div>
     <footer><p>Part of The Odin Project Curriculum</p>
-        <a href="google.com"><i class="fa-brands fa-github"></i></a>
+        <a href="https://github.com/Sanjay-Ganapathi/OdinJ/tree/main/Projects/project4-etch%20a%20sketch"><i class="fa-brands fa-github"></i></a>
     </footer>
     
 
